--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
     align-items: center;
     justify-content: center;
     background-color: #f0f0f0;
+    overflow-y: hidden;
 }
 #output {
     width: 90%;
