--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 body {
+    --key-width: 100px;
     font-family: Arial, sans-serif;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     background-color: #f0f0f0;
-    overflow-y: hidden;
 }
 #output {
     width: 90%;
@@ -28,33 +28,29 @@ input {
 }
 .keyboard {
     display: grid;
-    grid-template-columns: repeat(3, 100px);
     gap: 10px;
 }
 .key {
-    width: 100px;
-    height: 100px;
-    background-color: #3498db;
+    width: var(--key-width);
+    height: var(--key-width);
+    background-color: #2671a3;
     color: white;
-    font-size: 18px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     border-radius: 10px;
-    position: relative;
-    text-align: center;
     user-select: none;
     cursor: pointer;
-    padding: 5px;
 }
 .space {
     grid-column: span 3;
     background-color: #2ecc71;
     font-size: 24px;
+    width: calc(var(--key-width) * 2 + 10px);
 }
 .letters {
     font-size: 14px;
-    opacity: 0.8;
     margin-top: 5px;
+    color: rgb(246, 246, 246);
 }
