--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ input {
     font-size: 24px;
     width: calc(var(--key-width) * 2 + 10px);
     grid-column: 1 / 3;
-    background-color: #184a6c;
+    background-color: #033e1b;
 }
 
 .backspace {
