--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@ body {
     justify-content: center;
     background-color: #f0f0f0;
 }
+button {
+    border: none;
+}
+
 #output {
     width: 90%;
     max-width: 400px;
@@ -31,7 +35,7 @@ input {
     grid-template-columns: var(--key-width) var(--key-width) var(--key-width);
     gap: 10px;
 }
-.key {
+button {
     width: var(--key-width);
     height: var(--key-width);
     background-color: #2671a3;
@@ -48,7 +52,7 @@ input {
     font-size: 24px;
     width: calc(var(--key-width) * 2 + 10px);
     grid-column: 1 / 3;
-    background-color: #771c5d;
+    background-color: #27771c;
 }
 
 .backspace {
