--- a/style.css
+++ b/style.css
@@ -38,15 +38,19 @@ input {
 button {
     width: var(--key-width);
     height: var(--key-width);
-    background-color: #2671a3;
+    background-color: #1e577d;
     color: white;
+
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     border-radius: 10px;
+
     user-select: none;
     cursor: pointer;
+    font-weight: bold;
+    font-size: 24px;
 }
 .space {
     font-size: 24px;
@@ -72,5 +76,6 @@ button {
 .letters {
     font-size: 14px;
     margin-top: 5px;
-    color: rgb(246, 246, 246);
+    color: rgb(240, 240, 240);
+    font-weight: 100;
 }
