--- a/style.css
+++ b/style.css
@@ -1,40 +1,39 @@
 body {
     --key-width: 100px;
     font-family: Arial, sans-serif;
+    background-color: #f0f0f0;
     display: flex;
     flex-direction: column;
+    height: 100vh;
     align-items: center;
-    justify-content: center;
-    background-color: #f0f0f0;
+    margin: 0;
 }
+
 button {
     border: none;
 }
 
 #output {
-    width: 90%;
-    max-width: 400px;
-    height: 50px;
-    margin-bottom: 20px;
+    width: 80%;
+    flex: 1;
+    height: auto;
     font-size: 20px;
-    text-align: center;
     border: 1px solid #ccc;
     background-color: white;
-    padding: 10px;
+    margin: 1rem 0 1rem 0;
+    padding: 10px;	
+    overflow-y: auto;
 }
-input {
-    width: 90%;
-    max-width: 400px;
-    height: 50px;
-    font-size: 20px;
-    text-align: left;
-    padding: 10px;
-}
+
 .keyboard {
     display: grid;
-    grid-template-columns: var(--key-width) var(--key-width) var(--key-width);
+    grid-template-columns: repeat(3, var(--key-width));
+    grid-template-rows: repeat(4, var(--key-width));
     gap: 10px;
+    justify-content: center;
+    margin-bottom: 1rem;
 }
+
 button {
     width: var(--key-width);
     height: var(--key-width);
@@ -52,6 +51,7 @@ button {
     font-weight: bold;
     font-size: 24px;
 }
+
 .space {
     font-size: 24px;
     width: calc(var(--key-width) * 2 + 10px);
