--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    --key-width: 100px;
+    --key-width: 7rem;
     font-family: Arial, sans-serif;
     background-color: #f0f0f0;
     display: flex;
