--- a/style.css
+++ b/style.css
@@ -9,10 +9,6 @@ body {
     margin: 0;
 }
 
-button {
-    border: none;
-}
-
 #output {
     width: 80%;
     flex: 1;
@@ -37,7 +33,7 @@ button {
 button {
     width: var(--key-width);
     height: var(--key-width);
-    background-color: #1e577d;
+    background: #1e577d;
     color: white;
 
     display: flex;
@@ -45,9 +41,8 @@ button {
     align-items: center;
     justify-content: center;
     border-radius: 10px;
+    border: none;
 
-    user-select: none;
-    cursor: pointer;
     font-weight: bold;
     font-size: 24px;
 }
@@ -56,27 +51,28 @@ button {
     font-size: 24px;
     width: calc(var(--key-width) * 2 + 10px);
     grid-column: 1 / 3;
-    background-color: #27771c;
 }
 
 .backspace {
-    width: var(--key-width);
-    height: var(--key-width);
-    background-color: #e74c3c;
-    color: white;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    border-radius: 10px;
-    user-select: none;
-    cursor: pointer;
     font-size: 14px;
 }
 
 .letters {
-    font-size: 14px;
+    display: flex;
+    align-items: center;
+    font-size: 16px;
     margin-top: 5px;
     color: white;
     font-weight: normal;
+
+    div {
+        height: 1.5rem;
+        width: 0.1rem;
+        background: #bfbfbf;
+        margin: 0 1rem 0 1rem;
+    }
+}
+
+.function {
+    background: #082437;
 }
