--- a/main/style.css
+++ b/main/style.css
@@ -2,32 +2,28 @@ body {
     --key-width: 6rem;
     font-family: Arial, sans-serif;
     background-color: #f0f0f0;
-    display: flex;
-    flex-direction: column;
-    height: 92vh;
-    align-items: center;
+    display: grid;
+    grid-template-rows: 1fr auto;
+    height: 93vh;
     margin: 0;
 }
 
 #output {
-    width: 80%;
-    flex: 1;
-    height: auto;
+    height: 90%;
     font-size: 15px;
-    border: 1px solid #ccc;
     background-color: white;
-    margin: 1rem 0 1rem 0;
-    padding: 10px;	
     overflow-y: auto;
+    padding: 0;
+    margin: 1rem;
 }
 
 .keyboard {
     display: grid;
+    width: 100%;
     grid-template-columns: repeat(3, var(--key-width));
     grid-template-rows: repeat(4, var(--key-width));
     gap: 10px;
     justify-content: center;
-    margin-bottom: 1rem;
 }
 
 button {
